[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "videograbber"
version = "0.1.0"
description = "A simple tool to download videos from various social media platforms"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "VideoGrabber Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "yt-dlp>=2023.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "websockets>=12.0",
    "brotli>=1.1.0",
    "mutagen>=1.47.0",
    "pycryptodomex>=3.19.0",
]

[project.urls]
Homepage = "https://github.com/bubroz/videograbber"
Repository = "https://github.com/bubroz/videograbber.git"

[project.scripts]
videograbber = "videograbber.main:main" 